feat: add detail to function guestIndicator
1. Show or hide depending on whether it is disabled

2. restrict width of text using ellipsis

--- a/clone.html
+++ b/clone.html
@@ -1632,15 +1632,16 @@
                                         <div
                                             class="flex-container align-items-center flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
                                             <div id="structured-search-input-field-guests-button"
+                                                style="width: 0;"
                                                 class="pb_hover-height-32 pb_hover-grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-left-0 pb_hover-margin-top--16 pa_hover-background-color-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_margin-left-2 pa_user-select-auto padding-1 flex-basis-zero flex-grow-1 flex-shrink-0"
                                                 role="button" tabindex="0" aria-expanded="false">
                                                 <div
-                                                    class="padding-14-24 relative z-index-1 cursor-pointer pointer-none">
+                                                    class="padding-14-24 relative z-index-1 cursor-pointer pointer-none overflow-hidden width-full">
                                                     <div
                                                         class="font-black-34 font-12px font-500 padding-bottom-2 line-height-16px">
                                                         여행자
                                                     </div>
-                                                    <div class="font-grey-113 font-14px font-400 width-full line-height-18px text-ellipsis text-nowrap overflow-x-hidden">
+                                                    <div style="padding-right: 16px;" class="font-grey-113 font-14px font-400 width-full line-height-18px text-ellipsis text-nowrap overflow-hidden">
                                                         게스트 추가
                                                     </div>
                                                 </div>
@@ -1690,9 +1691,8 @@
                                                     <div
                                                         class="flex-container align-items-center justify-content-between height-32 width-104">
                                                         <button data-testid="stepper-adults-decrease-button" disabled
-                                                            class="cursor-not-allowed radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
-                                                            <span style="padding: 5px; width: 22px; height: 22px;"
-                                                                class="font-grey-235">
+                                                            class="cursor-not-allowed font-grey-235 radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                            <span style="padding: 5px; width: 22px; height: 22px;">
                                                                 <svg viewBox="0 0 12 12"
                                                                     xmlns="http://www.w3.org/2000/svg"
                                                                     aria-hidden="true" role="presentation"
@@ -1706,9 +1706,8 @@
                                                             <span id="stepper-adults-value">0</span>
                                                         </div>
                                                         <button data-testid="stepper-adults-increase-button"
-                                                            class="radius-50 black-border-176 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
-                                                            <span style="padding: 5px; width: 22px; height: 22px;"
-                                                                class="font-grey-106">
+                                                            class="radius-50 font-grey-106 black-border-176 hover-black-border-34 hover-font-black-34 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                            <span style="padding: 5px; width: 22px; height: 22px;">
                                                                 <svg viewBox="0 0 12 12"
                                                                     xmlns="http://www.w3.org/2000/svg"
                                                                     aria-hidden="true" role="presentation"
@@ -1737,9 +1736,8 @@
                                                     <div
                                                         class="flex-container align-items-center justify-content-between height-32 width-104">
                                                         <button data-testid="stepper-children-decrease-button" disabled
-                                                            class="cursor-not-allowed radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
-                                                            <span style="padding: 5px; width: 22px; height: 22px;"
-                                                                class="font-grey-235">
+                                                            class="cursor-not-allowed radius-50 font-grey-235 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                            <span style="padding: 5px; width: 22px; height: 22px;">
                                                                 <svg viewBox="0 0 12 12"
                                                                     xmlns="http://www.w3.org/2000/svg"
                                                                     aria-hidden="true" role="presentation"
@@ -1753,9 +1751,8 @@
                                                             <span id="stepper-children-value">0</span>
                                                         </div>
                                                         <button data-testid="stepper-children-increase-button"
-                                                            class="radius-50 black-border-176 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
-                                                            <span style="padding: 5px; width: 22px; height: 22px;"
-                                                                class="font-grey-106">
+                                                            class="radius-50 font-grey-106 black-border-176 hover-black-border-34 hover-font-black-34 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                            <span style="padding: 5px; width: 22px; height: 22px;">
                                                                 <svg viewBox="0 0 12 12"
                                                                     xmlns="http://www.w3.org/2000/svg"
                                                                     aria-hidden="true" role="presentation"
@@ -1784,9 +1781,8 @@
                                                     <div
                                                         class="flex-container align-items-center justify-content-between height-32 width-104">
                                                         <button data-testid="stepper-infants-decrease-button" disabled
-                                                            class="cursor-not-allowed radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
-                                                            <span style="padding: 5px; width: 22px; height: 22px;"
-                                                                class="font-grey-235">
+                                                            class="cursor-not-allowed radius-50 font-grey-235 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                            <span style="padding: 5px; width: 22px; height: 22px;">
                                                                 <svg viewBox="0 0 12 12"
                                                                     xmlns="http://www.w3.org/2000/svg"
                                                                     aria-hidden="true" role="presentation"
@@ -1800,9 +1796,9 @@
                                                             <span id="stepper-infants-value">0</span>
                                                         </div>
                                                         <button data-testid="stepper-infants-increase-button"
-                                                            class="radius-50 black-border-176 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                            class="radius-50 font-grey-106 black-border-176 hover-black-border-34 hover-font-black-34 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
                                                             <span style="padding: 5px; width: 22px; height: 22px;"
-                                                                class="font-grey-106">
+                                                                class="">
                                                                 <svg viewBox="0 0 12 12"
                                                                     xmlns="http://www.w3.org/2000/svg"
                                                                     aria-hidden="true" role="presentation"
@@ -1835,9 +1831,8 @@
                                                     <div
                                                         class="flex-container align-items-center justify-content-between height-32 width-104">
                                                         <button data-testid="stepper-pets-decrease-button" disabled
-                                                            class="cursor-not-allowed radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
-                                                            <span style="padding: 5px; width: 22px; height: 22px;"
-                                                                class="font-grey-235">
+                                                            class="cursor-not-allowed radius-50 font-grey-235 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                            <span style="padding: 5px; width: 22px; height: 22px;">
                                                                 <svg viewBox="0 0 12 12"
                                                                     xmlns="http://www.w3.org/2000/svg"
                                                                     aria-hidden="true" role="presentation"
@@ -1851,9 +1846,8 @@
                                                             <span id="stepper-pets-value">0</span>
                                                         </div>
                                                         <button data-testid="stepper-pets-increase-button"
-                                                            class="radius-50 black-border-176 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
-                                                            <span style="padding: 5px; width: 22px; height: 22px;"
-                                                                class="font-grey-106">
+                                                            class="radius-50 font-grey-106 black-border-176 hover-black-border-34 hover-font-black-34 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                            <span style="padding: 5px; width: 22px; height: 22px;">
                                                                 <svg viewBox="0 0 12 12"
                                                                     xmlns="http://www.w3.org/2000/svg"
                                                                     aria-hidden="true" role="presentation"
