--- a/clone.html
+++ b/clone.html
@@ -33,7 +33,7 @@
         <div style="top: 0; left: 0; z-index: 100; transition: height 250ms cubic-bezier(0.2, 0, 0, 1);"
             class="sticky height-168 grey-border-bottom">
             <header style="top: 0; left: 0; background-color: rgb(255, 255, 255); height: 100%;" class="sticky">
-                <div class="height-80 flex-container justify-content-between relative page-padding z-index-1">
+                <div class="height-80 flex-container justify-content-between relative page-padding z-index-1 align-items-center">
                     <!-- airbnb 로고 -->
                     <div style="flex-basis: 140px;" class="height-80 inline-flex-container flex-grow-1 flex-shrink-0">
                         <a href="https://www.airbnb.co.kr/"
@@ -62,17 +62,16 @@
                         <!-- small 검색바 -->
                         <div style="transform: scale(2.44, 1.375) translateY(58px); transform-origin: 50% 50%; transition: transform 250ms cubic-bezier(0.2,0,0,1), opacity 250ms cubic-bezier(0.2,0,0,1), visibility 0ms 125ms;"
                             data-searchbar-open="true"
-                            class="opacity-0 visibility-hidden pointer-none text-vertical-middle">
-                            <div style="box-shadow: rgba(0, 0, 0, 0.08) 0px 1px 2px 0px, rgba(0, 0, 0, 0.05) 0px 4px 12px 0px;"
-                                class="background-color-basic grey-border-221 radius-40 relative text-vertical-middle inline-flex-container align-items-center"
+                            class="z-index-1 opacity-0 visibility-hidden text-vertical-middle block-inline">
+                            <div class="hover-box-shadow-small-searchbar box-shadow-small-searchbar relative background-color-basic grey-border-221 radius-40 relative text-vertical-middle inline-flex-container align-items-center"
                                 id="little-search" aria-labelledby="littleSearchLabel">
                                 <span class="flex-container align-items-center ">
                                     <button
                                         style="padding-left: 8px; margin: -1px;"
-                                        class="background-color-transparent flex-basis-auto flex-grow-0 flex-shrink-1 flex-container cursor-pointer transparent-border height-48 align-items-center"
+                                        class="relative z-index-1 background-color-transparent flex-basis-auto flex-grow-0 flex-shrink-1 flex-container cursor-pointer transparent-border height-48 align-items-center"
                                         data-index="0" id="little-search-location">
                                         <div style="line-height: 22px; min-width: 80px; padding: 0px 16px;"
-                                            class="flex-basis-auto flex-grow-1 flex-shrink-1 text font-500 overflow-hidden text-ellipsis font-14px cursor-pointer">
+                                            class="flex-basis-auto flex-grow-1 flex-shrink-1 text font-500 overflow-hidden text-ellipsis font-14px cursor-pointer font-black-34">
                                             어디든지
                                         </div>
                                     </button>
@@ -80,9 +79,11 @@
                                     <span style="flex-basis: 1px;"
                                         class="background-color-221 flex-grow-0 flex-shrink-0 height-24 width-1"></span>
 
-                                    <button data-index="1" id="little-search-anytime">
+                                    <button style="margin: -1px;"
+                                        class="relative z-index-1 background-color-transparent flex-basis-auto flex-grow-0 flex-shrink-1 flex-container cursor-pointer transparent-border height-48 align-items-center" 
+                                        data-index="1" id="little-search-anytime">
                                         <div style="line-height: 22px; min-width: 80px; padding: 0px 16px;"
-                                            class="flex-basis-auto flex-grow-1 flex-shrink-1 text font-500 overflow-hidden text-ellipsis font-14px cursor-pointer">
+                                            class="flex-basis-auto flex-grow-1 flex-shrink-1 text font-500 overflow-hidden text-ellipsis font-14px cursor-pointer font-black-34">
                                             언제든 일주일
                                         </div>
                                     </button>
@@ -90,10 +91,16 @@
                                     <span style="flex-basis: 1px;"
                                         class="background-color-221 flex-grow-0 flex-shrink-0 height-24 width-1"></span>
 
-                                    <button data-index="2" id="little-search-guests">
+                                    <button style="margin: -1px;"
+                                        class="relative z-index-1 background-color-transparent flex-basis-auto flex-grow-0 flex-shrink-1 flex-container cursor-pointer transparent-border height-48 align-items-center"
+                                        data-index="2" id="little-search-guests">
                                         <div style="line-height: 22px; min-width: 80px; padding: 0px 16px;"
-                                            class="flex-basis-auto flex-grow-1 flex-shrink-1 text font-500 overflow-hidden text-ellipsis font-14px cursor-pointer">
+                                            class="flex-basis-auto flex-grow-1 flex-shrink-1 text font-500 overflow-hidden text-ellipsis font-14px cursor-pointer font-grey-106">
                                             게스트 추가
+                                        </div>
+                                        <div style="padding: 10px; margin: 7px 7px 7px 0px;"
+                                            class="font-white-255 background-color-main radius-50per">
+                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" style="display: block; fill: none; height:12px; width: 12px; stroke: currentColor; stroke-width: 5.333333333333333; overflow: visible" aria-hidden="true" role="presentation" focusable="false"><path fill="none" d="M13 24a11 11 0 1 0 0-22 11 11 0 0 0 0 22zm8-3 9 9"></path></svg>
                                         </div>
                                     </button>
                                 </span>
