--- a/clone.html
+++ b/clone.html
@@ -60,7 +60,7 @@
                     <!-- 숙소/체험/온라인 체험 | 여행지 검색/날짜 추가/게스트 추가 -->
                     <div class="flex-grow-0 flex-shrink-1 flex-basis-auto min-width-348 padding-0-24 text-center">
                         <!-- small 검색바 -->
-                        <div style="transform: scale(2.44, 1.375) translateY(58px); transform-origin: 50% 50%; transition: transform 250ms cubic-bezier(0.2,0,0,1), opacity 250ms cubic-bezier(0.2,0,0,1), visibility 0ms 125ms;"
+                        <div style="transform: scale(2.44, 1.375) translateY(58px); transform-origin: 50% 50%; transition: transform 250ms cubic-bezier(0.2,0,0,1), opacity 250ms cubic-bezier(0.2,0,0,1), visibility 0ms 125ms; will-change: transform;"
                             data-searchbar-open="true"
                             class="z-index-1 opacity-0 visibility-hidden text-vertical-middle block-inline">
                             <div class="hover-box-shadow-small-searchbar box-shadow-small-searchbar relative background-color-basic grey-border-221 radius-40 relative text-vertical-middle inline-flex-container align-items-center"
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                         <!-- big 검색바 -->
-                        <div style="transform-origin: 50% 0%; transition: transform 250ms cubic-bezier(0.2,0,0,1), opacity 150ms 100ms cubic-bezier(0.2,0,0,1), visibility 0ms 125ms;"
+                        <div style="transform-origin: 50% 0%; transition: transform 250ms cubic-bezier(0.2,0,0,1), opacity 150ms 100ms cubic-bezier(0.2,0,0,1), visibility 0ms 125ms; will-change: transform;"
                             class="opacity-10 page-padding width-full absolute top-0 left-0 relative z-index-2 pointer-none">
                             <div class="pointer-none padding-bottom-16">
                                 <div style="max-width: 850px;" class="pointer-none margin-0-auto">
