Feat: restore smallSearchbar and bigSearchbar to their original state

--- a/clone.html
+++ b/clone.html
@@ -31,9 +31,9 @@
     <div id='js-application' class="relative">
         <!-- 헤더 부분 -->
         <div style="top: 0; left: 0; will-change: height; z-index: 10; transition: height 250ms cubic-bezier(0.2, 0, 0, 1);"
-            class="sticky height-168 intrinsic-height-168 grey-border-bottom">
+            class="sticky height-168 intrinsic-height-168 header-parent-bottom-shadow">
             <header
-                class="relative left-0 z-index-100 background-color-basic height-80 pa_background-color-basic pa_width-full pa_height-full pa_absolute pa_z-index-0 pa_top-0 pa_left-0 pa_opacity-0 pa_transform-initial pa_transform-origin-50-0 pa_content">
+                class="relative left-0 z-index-100 background-color-basic height-80 pa_background-color-basic pa_width-full pa_height-full pa_absolute pa_z-index-0 pa_top-0 pa_left-0 pa_opacity-0 pa_transform-scaleY-2-1point pa_transform-origin-50-0 pa_content">
                 <div
                     class="height-full flex-container justify-content-between relative page-padding z-index-1 align-items-center">
                     <!-- airbnb 로고 -->
@@ -1707,7 +1707,7 @@
                                                 <div
                                                     class="flex-basis-zero flex-grow-1 flex-shrink-0 relative margin--1">
                                                     <div id="structured-search-input-field-split-dates-1"
-                                                        class=" pb_hover-height-32 pb_hover-grey-border-right-255 pb_hover-grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right--1 pb_hover-left--1 pb_hover-margin-top--16 pb_content pa_hover-background-color-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 padding-1 radius-32 transparent-border relative z-index-1"
+                                                        class=" pb_hover-height-32 pb_hover-grey-border-right-255 pb_hover-grey-border-left-255 pb_hover-align-self-center pb_hover-absolute pb_hover-top-33 pb_hover-right--1 pb_hover-left--1 pb_hover-margin-top--16 pb_content pa_hover-background-color-235 pa_background-padding-box pa_radius-32 pa_transparent-border pa_cursor-pointer pa_block pa_pointer-auto pa_absolute pa_top-0 pa_bottom-0 pa_left-0 pa_right-0 pa_z-index-0 pa_content padding-1 radius-32 transparent-border relative z-index-1"
                                                         role="button" tabindex="0" aria-expanded="false">
                                                         <div
                                                             class="padding-14-24 text-left relative z-index-1 cursor-pointer pointer-none">
