Fix: remove width and only remain max-width for showing active change in search button

--- a/clone.html
+++ b/clone.html
@@ -117,7 +117,7 @@
                             class="opacity-10 page-padding width-full absolute top-0 left-0 relative z-index-2 pointer-none">
                             <div class="pointer-none padding-bottom-16">
                                 <div style="max-width: 850px;" class="pointer-none margin-0-auto">
-                                    <!-- 숙소 / 체험 / 온라인 체험 -->
+                                    <!-- 숙소 / 체험 -->
                                     <div
                                         class="flex-container height-80 align-items-center justify-content-center pointer-none">
                                         <div role="tablist" class="height-44 pointer-auto">
@@ -1747,7 +1747,7 @@
                                                 <div style="margin-left: -6px; padding-right: 9px;"
                                                     class="flex-basis-zero flex-grow-0 flex-shrink-0 z-index-5">
                                                     <button
-                                                        class="delay-0ms cubic-function duration-200ms transition-max-width behavior-normal max-width-48 background-color-main no-border radius-24 cursor-pointer block-inline font-white-255 height-48 text-vertical-middle width-48 relative z-index-0 overflow-hidden"
+                                                        class="delay-0ms cubic-function duration-200ms transition-max-width behavior-normal max-width-48 background-color-main no-border radius-24 cursor-pointer block-inline font-white-255 height-48 text-vertical-middle relative z-index-0 overflow-hidden"
                                                         id="structured-search-input-search-button">
                                                         <div
                                                             class="inline-flex-container padding-16 relative z-index-1">
@@ -1763,7 +1763,7 @@
                                                                 </svg>
                                                             </div>
                                                             <div style="padding-left: 8px; padding-right: 4px;"
-                                                                class="text cursor-pointer opacity-0 behavior-normal delay-100ms duration-100ms transition-opacity cubic-function line-height-16px">
+                                                                class="text cursor-pointer opacity-0 delay-100ms duration-100ms transition-opacity cubic-function line-height-16px">
                                                                 검색
                                                             </div>
                                                         </div>
