Feat: add dynamic search button according to if it is focused

--- a/clone.html
+++ b/clone.html
@@ -1747,8 +1747,14 @@
                                                 <div style="margin-left: -6px; padding-right: 9px;"
                                                     class="flex-basis-zero flex-grow-0 flex-shrink-0 z-index-5">
                                                     <button
-                                                        class="delay-0ms cubic-function duration-200ms transition-max-width behavior-normal max-width-48 background-color-main no-border radius-24 cursor-pointer block-inline font-white-255 height-48 text-vertical-middle relative z-index-0 overflow-hidden"
+                                                        class="delay-0ms cubic-function duration-200ms transition-max-width behavior-normal max-width-48 background-color-main no-border radius-24 cursor-pointer block-inline font-white-255 height-48 text-vertical-middle relative z-index-0 overflow-hidden relative pb_content pb_absolute pb_opacity-0 pb_transition-opacity-02 pb_bottom-0 pb_top-0 pb_left-0 pb_right-0 pb_background-color-transparent pb_background-image-search-button pb_z-index-0 pb_hover-opacity-10"
                                                         id="structured-search-input-search-button">
+                                                        <!-- <span class="radius-8 height-full width-full absolute top-0 right-0 bottom-0 left-0 overflow-hidden">
+                                                            <span style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%); --mouse-x: 17.75; --mouse-y: 87.5;"
+                                                            class="">
+                                                            </span>
+                                                        </span> -->
+                                                        <!-- TODO 검색 버튼 focused인 상태에서 hover 시 커서의 위치를 중심으로 원형 그라데이션션  -->
                                                         <div
                                                             class="inline-flex-container padding-16 relative z-index-1">
                                                             <div>
@@ -1763,7 +1769,7 @@
                                                                 </svg>
                                                             </div>
                                                             <div style="padding-left: 8px; padding-right: 4px;"
-                                                                class="text cursor-pointer opacity-0 delay-100ms duration-100ms transition-opacity cubic-function line-height-16px">
+                                                                class="text cursor-pointer opacity-0 delay-100ms duration-100ms transition-opacity font-16px cubic-function line-height-16px">
                                                                 검색
                                                             </div>
                                                         </div>
