Fix: remove pointer-none class

--- a/clone.html
+++ b/clone.html
@@ -385,7 +385,7 @@
                                                                         id="tab-placesByAreasTabId-0"
                                                                         aria-controls="panel-placesByAreasTabId-0"
                                                                         aria-selected="true" role="tab"
-                                                                        class="transparent-button relative pa_absolute pa_height-2 pa_width-calc-100-20 pa_bottom--6 pa_left-10 pa_background-color-34 pa_content radius-8 hover-background-color-247 font-black-34 padding-10 margin-6-6-6-0 pointer-none">
+                                                                        class="transparent-button relative pa_absolute pa_height-2 pa_width-calc-100-20 pa_bottom--6 pa_left-10 pa_background-color-34 pa_content radius-8 hover-background-color-247 font-black-34 padding-10 margin-6-6-6-0">
                                                                         <div style="pointer-events: none;"
                                                                             class="text text-center font-500 font-14px">
                                                                             전 세계
